--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -5,4 +5,4 @@ yarn_mappings=1.20.1+build.10
 # Dependencies
 loader_version=0.15.11
 fabric_api_version=0.88.1+1.20.1
-arrp_version=0.8.1
+advanced_runtime_resource_pack_version=0.8.1
