--- a/fabric/modules/bows/build.gradle
+++ b/fabric/modules/bows/build.gradle
@@ -3,5 +3,5 @@
 //file:noinspection DependencyNotationArgument
 
 dependencies {
-	include(implementation(project(":fabric:${rootProject.mod_id}-fabric-core")))
+	implementation(project(":fabric:${rootProject.mod_id}-fabric-core"))
 }
