--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -4,18 +4,20 @@
 
 dependencies {
 	// Fabric common module
-	include(implementation(project(":fabric:minecraft-common")))
+	implementation(project(":fabric:minecraft-common"))
 
 	// Fabric generator module
 	// TODO: Fix circular dependency
-	include(implementation(project(":fabric:modules:generator")))
+	implementation(project(":fabric:modules:generator"))
+
+	// Fabric Loader
+	modCompileOnly "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
 	// Advanced Runtime Resource Pack
 	modImplementation("maven.modrinth:arrp:${project.advanced_runtime_resource_pack_version}")
-	include("maven.modrinth:arrp:${project.advanced_runtime_resource_pack_version}")
 }
 
 sourceSets {
