--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -7,9 +7,9 @@ player_animator_version=1.0.2-rc1+1.20-fabric
 better_combat_version=1.7.3+1.20.1-fabric
 owo_lib_version=0.11.2+1.20
 reach_entity_attributes_version=2.5.0
-architectury_version=6.1.39
+architectury_version=9.2.14
 additional_entity_attributes_version=1.7.4+1.20.0
-mythic_metals_version=4118479
-alloy_forgery_version=4073356
+mythic_metals_version=0.19.9+1.20.1
+alloy_forgery_version=2.1.2+1.20
 spruceui_version=4.2.0+1.19.4
 lamb_dynamic_lights_version=2.3.0+1.19.4
