build: Fix Fabric Loader tests

--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	include(implementation(project(path: ":fabric:minecraft-common", configuration: "namedElements")))
 	include(implementation(project(path: ":fabric:${rootProject.mod_id}-fabric-core", configuration: "namedElements")))
 
+	// Fabric JUnit
+	testImplementation("net.fabricmc:fabric-loader-junit:${project.loader_version}")
+
 	// Fabric Loader
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
@@ -73,8 +76,7 @@ dependencies {
 
 sourceSets {
 	test {
-		compileClasspath += test.compileClasspath
-		runtimeClasspath += test.runtimeClasspath
+		compileClasspath += main.compileClasspath
 		runtimeClasspath += main.runtimeClasspath
 	}
 }
