--- a/forgero-core/build.gradle
+++ b/forgero-core/build.gradle
@@ -2,10 +2,12 @@
 //file:noinspection GroovyAssignabilityCheck
 
 dependencies {
-	api("com.mojang:datafixerupper:${project.data_fixer_upper_version}")
+	// JUnit
+	testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
+	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
 
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+	// DataFixerUpper
+	api("com.mojang:datafixerupper:${project.data_fixer_upper_version}")
 }
 
 processResources {
