--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 
 	// Mythic Metals
 	annotationProcessor(modImplementation("io.wispforest:owo-lib:${project.owo_lib_version}"))
-	include(modImplementation("org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_api_version}"))
+	include(modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_api_version}"))
 	include(modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}"))
 	modRuntimeOnly("dev.architectury:architectury-fabric:${project.architectury_version}") {
 		exclude group: "net.fabricmc", module: "fabric-loader"
