--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -14,3 +14,4 @@ mythic_metals_version=0.19.9+1.20.1
 alloy_forgery_version=2.1.2+1.20
 spruceui_version=4.2.0+1.19.4
 lamb_dynamic_lights_version=2.3.0+1.19.4
+create_version = 0.5.1-f-build.1467+mc1.20.1
