--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ allprojects {
 		maven { url = "https://maven.kosmx.dev/" }
 		maven { url = "https://jitpack.io" }
 		maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
+		maven { url = "https://mvn.devos.one/snapshots/" } // Create, Porting Lib, Forge Tags, Milk Lib, Registrate
+		maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // Forge Config API Port
+		maven { url = "https://maven.tterrag.com/" } // Flywheel
 		maven {
 			name = "Xander Maven"
 			url = "https://maven.isxander.dev/releases"
