--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -10,14 +10,11 @@ dependencies {
 	// TODO: Fix circular dependency
 	implementation(project(path: ":fabric:modules:generator", configuration: 'namedElements'))
 
-	// Fabric JUnit
-	testImplementation("net.fabricmc:fabric-loader-junit:${project.loader_version}")
-
 	// Fabric Loader
-	modCompileOnly "net.fabricmc:fabric-loader:${project.loader_version}"
+	modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
 
 	// Fabric API
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")
 
 	// Advanced Runtime Resource Pack
 	modImplementation("maven.modrinth:arrp:${project.advanced_runtime_resource_pack_version}")
