--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,8 +1,11 @@
+# Plugins
 fabric_loom_version=1.7-SNAPSHOT
-fabric.loom.multiProjectOptimisation=false
-yarn_mappings=1.20.1+build.10
-
 # Dependencies
+yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 fabric_api_version=0.92.2+1.20.1
 advanced_runtime_resource_pack_version=0.8.1
+# Config
+# Optimizations causes issues with building artifacts with correct remapping
+fabric.loom.multiProjectOptimisation=false
+
