--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -7,20 +7,21 @@ dependencies {
 	implementation(project(path: ":fabric:minecraft-common", configuration: 'namedElements'))
 
 	// Fabric generator module
-	// TODO: Fix circular dependency
 	implementation(project(path: ":fabric:modules:generator", configuration: 'namedElements'))
 
-	// Fabric JUnit
-	testImplementation("net.fabricmc:fabric-loader-junit:${project.loader_version}")
+	// Bow and arrows
+	// Arrows and bow tests are still in the core fabric module. This dependency is needed until they are moved to their own module.
+	// Ref: https://github.com/SigmundGranaas/forgero/issues/933
+	localRuntime(project(path: ":fabric:modules:bows", configuration: 'namedElements'))
 
 	// Fabric Loader
-	modCompileOnly "net.fabricmc:fabric-loader:${project.loader_version}"
+	modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
 
 	// Fabric API
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")
 
 	// Advanced Runtime Resource Pack
-	modImplementation("maven.modrinth:arrp:${project.advanced_runtime_resource_pack_version}")
+	modApi("maven.modrinth:arrp:${project.advanced_runtime_resource_pack_version}")
 }
 
 sourceSets {
