--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 
 	// Bows
 	localRuntime(project(path: ":fabric:modules:bows", configuration: 'namedElements'))
-	
+
 	// Fabric Loader
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
@@ -34,15 +34,18 @@ dependencies {
 	modImplementation("maven.modrinth:better-combat:${project.better_combat_version}")
 
 	// Mythic Metals
-	annotationProcessor(modImplementation("io.wispforest:owo-lib:${project.owo_lib_version}"))
-	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_api_version}")
-	modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}")
-	modRuntimeOnly("dev.architectury:architectury-fabric:${project.architectury_version}") {
-		exclude group: "net.fabricmc", module: "fabric-loader"
-	}
-	modImplementation("maven.modrinth:AdditionalEntityAttributes:${project.additional_entity_attributes_version}")
-	modImplementation("maven.modrinth:mythicmetals:${project.mythic_metals_version}")
-	modImplementation("maven.modrinth:alloy-forgery:${project.alloy_forgery_version}")
+	// OwO thought it would be nice to give users a prompt to accept eula which crashes the test server. Don't enable it for anything but local testing.
+	/**
+	 annotationProcessor(modImplementation("io.wispforest:owo-lib:${project.owo_lib_version}"))
+	 modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_api_version}")
+	 modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}")
+	 modImplementation("dev.architectury:architectury-fabric:${project.architectury_version}") {
+	 exclude group: "net.fabricmc", module: "fabric-loader"
+	 }
+	 modImplementation("maven.modrinth:AdditionalEntityAttributes:${project.additional_entity_attributes_version}")
+	 modImplementation("maven.modrinth:mythicmetals:${project.mythic_metals_version}")
+	 modImplementation("maven.modrinth:alloy-forgery:${project.alloy_forgery_version}")
+	 */
 
 	// LambDynamicLights
 	modCompileOnly("dev.lambdaurora:spruceui:${project.spruceui_version}")
@@ -58,15 +61,16 @@ sourceSets {
 
 loom {
 	accessWidenerPath = file("src/main/resources/${project.name}.accesswidener")
+
 	runs {
-		testModServer {
+		testServer {
 			server()
 			ideConfigGenerated project.rootProject == project
-			name = "TestMod Server"
+			name = "Test Server"
 			source sourceSets.test
 		}
 		gameTest {
-			inherit testModServer
+			inherit testServer
 
 			name "Game Test"
 			// Enable the gametest runner
