--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -14,3 +14,7 @@ mythic_metals_version=0.19.9+1.20.1
 alloy_forgery_version=2.1.2+1.20
 spruceui_version=4.2.0+1.19.4
 lamb_dynamic_lights_version=2.3.0+1.19.4
+bclib_version=3.0.14
+betterend_version=4.0.11
+wunderlib_version=1.1.5
+
