More compats set up

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,14 @@ allprojects {
 				includeGroup "com.jamieswhiteshirt"
 			}
 		}
+		maven {
+			name = 'GeckoLib'
+			url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+			content {
+				includeGroupByRegex("software\\.bernie.*")
+				includeGroup("com.eliotlash.mclib")
+			}
+		}
 	}
 
 	dependencies {
