--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -14,3 +14,8 @@ mythic_metals_version=0.19.9+1.20.1
 alloy_forgery_version=2.1.2+1.20
 spruceui_version=4.2.0+1.19.4
 lamb_dynamic_lights_version=2.3.0+1.19.4
+imbuement_version=1.20.1-19.4
+trinkets_version=3.7.2
+fzzy_version=0.5.1+1.20.1
+amethyst_core_version=1.5.0+1.20.1
+fzzyConfigVersion=0.3.5+1.20.1
