--- a/content/forgero-compat/src/main/resources/data/forgero/packs/naturalist/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/naturalist/package.json
@@ -2,11 +2,11 @@
   "name": "naturalist-materials",
   "resource_type": "PACKAGE",
   "priority": 4,
-  "namespace": "ae2",
+  "namespace": "naturalist",
   "dependencies": [
     "minecraft",
     "forgero",
     "minecraft-vanilla",
-    "ae2"
+    "naturalist"
   ]
 }
