Added powdered obsidian

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/create/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/create/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-materials",
+  "name": "create-compat",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "create",
