Fixed wrong namespace Added first animation (sneak peak animations are broken hihi)

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/regionsunexplored/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/regionsunexplored/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "regionsunexplored-compat",
+  "name": "regions_unexplored-compat",
   "resource_type": "PACKAGE",
   "priority": 5,
   "namespace": "minecraft",
@@ -7,6 +7,6 @@
     "minecraft",
     "forgero",
     "minecraft-vanilla",
-    "regionsunexplored"
+    "regions_unexplored"
   ]
 }
