--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -119,6 +119,7 @@ curseforge {
 				optionalDependency "betternether"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
+				optionalDependency "create"
 				incompatible "exordium"
 			}
 		}
