Changed some palettes and called it compat

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/betterend/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/betterend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "betterend-materials",
+  "name": "betterend-compat",
   "resource_type": "PACKAGE",
   "priority": 5,
   "namespace": "betterend",
