Added custom trades to villagers for refined/mastercrafted tools

--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -10,6 +10,10 @@ dependencies {
 	// Bows
 	localRuntime(project(path: ":fabric:modules:bows", configuration: 'namedElements'))
 
+	// Trade
+	localRuntime(project(path: ":fabric:modules:trade", configuration: 'namedElements'))
+
+
 	// Fabric Loader
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
