Changes the stuff from the pr feedback

--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -14,6 +14,9 @@ dependencies {
 	// Ref: https://github.com/SigmundGranaas/forgero/issues/933
 	localRuntime(project(path: ":fabric:modules:bows", configuration: 'namedElements'))
 
+	// Trade
+	localRuntime(project(path: ":fabric:modules:trade", configuration: 'namedElements'))
+
 	// Fabric Loader
 	modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
 
