Added dependencies & _planks

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/natures_spirit/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/natures_spirit/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "natures_spirit-materials",
+  "name": "natures_spirit-compat",
   "resource_type": "PACKAGE",
   "priority": 4,
-  "namespace": "mythicmetals",
+  "namespace": "natures_spirit",
   "dependencies": [
     "minecraft",
     "forgero",
