--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -1,5 +1,5 @@
 # Dependencies
-yacl_version=3.2.1+1.20
+yacl_version=3.2.2+1.20-fabric
 modmenu_version=7.2.2
 patchouli_version=1.20.1-84-fabric
 cloth_config_version=11.1.118+fabric
